--- a/clase 12/index.html
+++ b/clase 12/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos.css">
-    <title>Juego de Memoria</title>
+    <title>Entrega Tarea 12</title>
 </head>
 <body>
     <body>
